bk_ida/gccida/c2/pedwarn_with_file_and_line
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pedwarn_with_file_and_line/src/diagnostic.c:1493:1: error: unknown type name 'diagnostic_context_0'; did you mean 'diagnostic_context'?
diagnostic_context_0 s; // [rsp+D8h] [rbp-1A0h] BYREF 
^~~~~~~~~~~~~~~~~~~~
diagnostic_context
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pedwarn_with_file_and_line/src/diagnostic.h:29:35: note: 'diagnostic_context' declared here
typedef struct diagnostic_context diagnostic_context;
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pedwarn_with_file_and_line/src/diagnostic.c:1499:27: error: expected expression
s.args_ptr = ( va_list_0 *)va; 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pedwarn_with_file_and_line/src/diagnostic.c:1499:16: error: use of undeclared identifier 'va_list_0'
s.args_ptr = ( va_list_0 *)va; 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pedwarn_with_file_and_line/src/diagnostic.c:1503:12: error: expected expression
*( _OWORD *)&s.begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pedwarn_with_file_and_line/src/diagnostic.c:1503:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s.begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pedwarn_with_file_and_line/src/diagnostic.c:1503:46: error: expected expression
*( _OWORD *)&s.begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pedwarn_with_file_and_line/src/diagnostic.c:1503:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s.begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
                                     ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/pedwarn_with_file_and_line/src/obj/diagnostic.o] Error 1
